ags (1.4.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed mutex access in ags_apply_bpm.c
	* fixed crash during ags_recycling_context_reset() and ags_channel_recursive_play_down()
	* updated gtk-doc related files

ags (1.4.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed looped audio signal

ags (1.4.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* more-fixes to return from unneeded processing

ags (1.4.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed return from unneeded processing

ags (1.4.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented rt-safe mode
	* implemented ags-rt-stream recall
	* implemented AgsLevel, AgsLevelBox, AgsVLevelBox, AgsHScaleBox and AgsScrolledScaleBox in libags-gui
	* fixed potential SIGSEGV in ags_devout_pcm_info()

ags (1.3.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved use of paned widgets to use GtkViewport

ags (1.3.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_notation.c and ags_automation.c to always match timestamp
	* increased timeouts of functional tests because build environment might have not much power

ags (1.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed paste only as within defined offset of AgsNotation and AgsAutomation
	* fixed ags_notation_edit_draw_selection() to use vscrollbar to determine y offset
	* improved selection to select only within area

ags (1.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed buffer-overflow in ags_synth_generator.c
	* improved ags.rc

ags (1.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed possible unitialized AgsAudioSignal in AgsApplySynth
	* fixed all wrong string vector static initializers from char **strv to char *strv[]
	* fixed arbritary return in drawing functions without destroying cairo_t

ags (1.3.1)
